fix: fix some comments

--- a/src/app/components/method-table/method-table.component.html
+++ b/src/app/components/method-table/method-table.component.html
@@ -1,7 +1,7 @@
 <app-target-table [dataSource]="methods"
                [displayedColumns]="displayedColumns"
                [referenceId]="'Method ID'"
-               [title]="'Methods'"
+               [title]="'วิธีการดำเนินงาน/แผนการดำเนินงาน'"
                [runningNo]="runningNo"
                [targetId]="targetId"
                >
