--- a/src/app/components/sub-target-table/sub-target-table.component.html
+++ b/src/app/components/sub-target-table/sub-target-table.component.html
@@ -1,10 +1,11 @@
 <app-target-table [dataSource]="subTargets"
                [displayedColumns]="displayedColumns"
                [referenceId]="'Sub Target ID'"
-               [title]="'Sub Targets'"
+               [title]="'เป้าหมายย่อย'"
                [iconKeyReference]="'has_methods'"
                [renderTemplate]="'method'"
                [runningNo]="runningNo"
                [targetId]="targetId"
+               (refreshTable)="refreshMainTable()"
                >
 </app-target-table>
