--- a/src/app/appmenu/appmenu.component.html
+++ b/src/app/appmenu/appmenu.component.html
@@ -1,8 +1,8 @@
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
     <a href="index3.html" class="brand-link">
-      <img src="../../assets/dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
-      <span class="brand-text font-weight-light">AdminLTE 3</span>
+      <img src="../../assets/dist/img/betagro-logo-1.png" alt="Betagro-Logo" class="brand-image" style="opacity: .8">
+      <span class="brand-text font-weight-light" style="opacity: 0;">AdminLTE 3</span>
     </a>
 
     <!-- Sidebar -->
@@ -13,7 +13,7 @@
           <img src="../../assets/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
         </div>
         <div class="info">
-          <a href="#" class="d-block">Alexander Pierce</a>
+          <a href="#" class="d-block">กิตติคุณ มั่งมีสีสุข</a>
         </div>
       </div>
 
@@ -30,7 +30,7 @@
       </div>
 
       <!-- Sidebar Menu -->
-      <nav class="mt-2" style="overflow-y: hidden">
+      <nav class="mt-2">
         <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
           <app-menu-list-item *ngFor="let item of menu" [menuItem]="item"></app-menu-list-item>
 
